--- a/src/RepositoryPattern.Infrastructure/RepositoryPattern.Infrastructure.csproj
+++ b/src/RepositoryPattern.Infrastructure/RepositoryPattern.Infrastructure.csproj
@@ -12,8 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
