--- a/src/RepositoryPattern.Application/RepositoryPattern.Application.csproj
+++ b/src/RepositoryPattern.Application/RepositoryPattern.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Commons\Exceptions\" />
+    <Folder Include="CQRS\Queries\" />
   </ItemGroup>
 
 </Project>
